# rolling-sphere-mvp

./: .replit  README.md  app.py  pyproject.toml  replit.md  requirements.txt  sample_material_declaration.csv
data/: emission_factors.py  emissions_calculator.db  regulatory_database.py  users.json
templates/: Rolling_Sphere_Complete_CO2_Template_1755947979815.xlsx  rolling_sphere_template.xlsx
utils/: auth.py  compliance_engine.py  data_storage.py  data_validator.py  database.py  emissions_calculator.py  pdf_generator.py  pdf_report_generator.py
